更新工作进度文档

--- a/Docs/年前工作进度.md
+++ b/Docs/年前工作进度.md
@@ -1,5 +1,2 @@
-1、已完成rg200u初始化连接服务器
-2、但是联通ipv6可能含有nat，导致无法服务器->sim卡无法发送消息
-3、等待物联网卡和确定通信方式之后再调试
-4、每次打开需更新ip地址
-5、调试485通道有一些杂乱的调试信息，如解决了记得删掉
+1、已完成rg200u初始化连接服务器并自动连接tcp服务器，并开启实时接收信息，调试完成
+2、每次打开需更新ip地址
